--- a/data/styles/gallery.css
+++ b/data/styles/gallery.css
@@ -1,20 +1,47 @@
 #menu {
-    background: #00b8ff;
+    background: #7b7b7b;
     width: 200px;
     height: 500px;
     margin: 5px;
+    border: 2px solid black;
+    border-radius: 4px;
 }
 #imageWindow{
     width: 785px;
     height: 890px;
     position: absolute;
-    background: white;
-    margin: -505px 210px
+    margin: -505px 265px
 }
 .miniImageWindow {
 	overflow: hidden;
 	width: 200px;
 	height: 200px;
 	display: inline-block;
-	margin: 5px 29px;
+	margin: 5px 14px;
+	border-radius: 5px;
+	background: black;
+	border: 1px solid black;
+}
+.miniImage:hover{
+	opacity: 0.7;
+	cursor: pointer;
+}
+#formLoadImage {
+	display: none;
+	margin: 10px 5px;
+}
+#formLoadImage input{
+	width: 114px;
+}
+.menuButton:hover{
+	background: rgba(218, 220, 108, 0.85);
+	cursor: pointer;
+}
+.menuButton {
+	width: 190px;
+	height: 40px;
+	margin: 2px 5px;
+	border-radius: 10px;
+	background: rgba(218, 220, 108, 0.68);
+	outline: none;
 }
