--- a/data/styles/mainPage.css
+++ b/data/styles/mainPage.css
@@ -8,20 +8,32 @@
 	overflow: hidden;
 	border: 5px solid black;
 }
+
+
 #userData{
     width: 700px;
     height: 150px;
     background: rgba(243, 241, 182, 0.48);
-    margin: -265px 280px;
+    margin: -273px 280px;
     position: absolute;
     border-radius: 3px;
     border: 5px solid black;
 }
+#fullNameUser{
+    margin: 10px 50px;
+    font-size: 40px;
+}
+.additionalData{
+    margin: 10px 50px;
+}
+
+
 #newsWindow{
     position: absolute;
     width: 710px;
     height: 715px;
-    margin: -95px 280px
+    margin: -113px 279px;
+ 
 }
 #buttonForBlockOutput:hover{
     cursor: pointer;
@@ -31,36 +43,144 @@
     text-align: center;
     background: rgba(249, 232, 1, 0.13);
     width: 700px;
-    height: 50px;
+    height: 40px;
     margin: 0 5px;
     font-size: 30px;
     border: 1px solid black;
+    border-radius: 1px 1px 100px 100px;
+}
+#formShareTheNews{
+	display: none;
 }
 #shareTheNews{
-    width: 696px;
+    width: 680px;
     margin: 0 5px;
     height: 100px;
-    display: none;
+    border-radius: 0 0 20px 20px;
+    background: rgba(255, 255, 0, 0.06);
+    outline: none;
+    font-size: 20px;
+    padding: 10px;
 }
-#userMenu{
-    width: 250px;
-    height: 500px;
+.newsButton:hover{
+    cursor: pointer;
+    background: rgba(255, 255, 0, 0.18);
+}
+.newsButton{
+	width: 100px;
+	height: 30px;
+	background: rgba(255, 255, 0, 0.11);
+	border-radius: 0 0 10px 10px;
+	outline: none;
+}
+#sendNewNews{
+    margin: -25px 575px;
     position: absolute;
-    background: #e1abea;
-    margin: 10px 
 }
-#fullNameUser{
-    margin: 10px 50px;
-    font-size: 40px;
+#showFileInput{
+	margin: -5px 470px;
 }
-.additionalData{
-    margin: 10px 50px;
+#fileInput{
+	display: none;
+	width: 715px;
+	height: 20px;
 }
-.aButton:hover{
-    background: rgba(243, 245, 124, 0.48);
+.newsBlock{
+	background: url(../images/depositphotos_77853788-stock-photo-yellow-delicate-satin-background-with.jpg);
+    border: 1px solid black;
+    border-radius: 2px;
+    margin-top: 10px;
 }
+.newsText{
+    font-size: 20px;
+    padding: 5px 30px;
+    margin-left: 150px;
+    margin-top: 1px;
+    background: white;
+}
+.newsWindowImage{
+    overflow: none;
+	margin-left: 150px;
+	margin-top: -20px;
+	background: white;
+}
+.newsImage{
+	border: 1px solid black;
+}
+.deleteNews:hover{
+	background: rgba(243, 134, 110, 0.37);
+	cursor: pointer;
+}
+.settingUpNews:hover{
+	opacity: 1.0;
+}
+.settingUpNews{
+	position: absolute;
+	right: 0;
+	opacity: 0;
+	height: 60px;
+}
+.deleteNews{
+	border-radius: 100px;
+	width: 15px;
+	height: 15px;
+	font-size: 10px;
+	padding: 0;
+	color: #a90505;
+	background: rgba(225, 226, 160, 0.38);
+	outline: none;
+}
+
+
+
+#userMenu{
+    width: 260px;
+    height: 600px;
+    position: absolute;
+    margin: 0 10px; 
+}
+.menuButton:hover{
+    background: rgba(101, 101, 101, 0.11);
+}
+.menuButton {
+    width: 260px;
+    height: 30px;
+    font-size: 25px;
+    color: black;
+    text-align: center;
+    border-radius: 2px;
+    margin: 5px 0;
+}
+
+
+.theDataSender{
+	background: rgb(235, 233, 205);
+	height: 70px;
+	margin: -1px;
+	border: 1px solid black
+}
+.windowAvatarSender{
+	border-radius: 100px;
+	border: 2px solid black;
+	width: 65px;
+	height: 65px;
+	margin: 0 26px;
+	overflow: hidden;
+	position: absolute;
+}
+.theFullNameSender{
+	font-size: 20px;
+	text-align: center;
+	position: absolute;
+	margin: 10px 110px;
+}
+
+
 .aButton{
     text-decoration: none;
+}
+#exitButton:hover{
+    background: rgba(243, 245, 124, 0.48);
 }
 #exitButton{
     margin: 9px 410px;
