--- a/data/styles/gallery.css
+++ b/data/styles/gallery.css
@@ -1,30 +1,10 @@
 #menu {
     background: #7b7b7b;
     width: 200px;
-    height: 500px;
     margin: 5px;
     border: 2px solid black;
     border-radius: 4px;
-}
-#imageWindow{
-    width: 785px;
-    height: 890px;
     position: absolute;
-    margin: -505px 265px
-}
-.miniImageWindow {
-	overflow: hidden;
-	width: 200px;
-	height: 200px;
-	display: inline-block;
-	margin: 5px 14px;
-	border-radius: 5px;
-	background: black;
-	border: 1px solid black;
-}
-.miniImage:hover{
-	opacity: 0.7;
-	cursor: pointer;
 }
 #formLoadImage {
 	display: none;
@@ -44,4 +24,41 @@
 	border-radius: 10px;
 	background: rgba(218, 220, 108, 0.68);
 	outline: none;
+}
+#userData{
+	height: 250px;
+}
+#windowUserImage{
+	width: 175px;
+	height: 175px;
+	border: 1px solid black;
+	margin: 10px;
+	overflow: hidden;
+}
+#fullNameUser{
+	text-align: center;
+	font-size: 20px;
+	margin-top: 10px;
+}
+
+
+#imageWindow{
+    width: 785px;
+    height: 890px;
+    position: absolute;
+    margin: 12px 265px;
+}
+.miniImageWindow {
+	overflow: hidden;
+	width: 200px;
+	height: 200px;
+	display: inline-block;
+	margin: 5px 14px;
+	border-radius: 5px;
+	background: black;
+	border: 1px solid black;
+}
+.miniImage:hover{
+	opacity: 0.7;
+	cursor: pointer;
 }
