--- a/data/styles/basicStyle.css
+++ b/data/styles/basicStyle.css
@@ -1,6 +1,8 @@
 body{
 	background: url(../images/17599833.jpg)
 }
+
+
 #upperBand {
 	width: 100%;
 	text-align: center;
@@ -17,6 +19,47 @@ body{
 	height: 40px;
 	margin: 0 auto;
 }
+.menuInUpperBandButton p:hover{
+	background: #f1eba5;
+}
+.menuInUpperBandButton p{
+	margin: 0px 0;
+   height: 20px;
+   border: 0.3px solid black;
+}
+#userDataInUpperBand{
+	position: absolute;
+	height: 37px;
+	margin: 0 850px;
+	width: 150px;
+	cursor: pointer;
+}
+#userNameInUpperBand{
+	margin: 9px 0;
+	text-align: right;
+	padding-right: 40px;
+}
+#windowAvatarUserInUpperBand{
+	width: 37px;
+	height: 37px;
+	position: absolute;
+	right: 0px;
+	top: 0px;
+	border-radius: 100px;
+	overflow: hidden;
+}
+#menuInUpperBand{
+	display: none;
+	width: 140px;
+	border: 1px solid black;
+	background: rgb(243, 242, 239);
+	position: absolute;
+	margin: 5px 0;
+	border-radius: 5px;
+	overflow: hidden;
+}
+
+
 #window {
 	margin: 50px auto;
 	width: 1000px;
@@ -25,18 +68,14 @@ body{
 	background: #e4e2e2;
 	border-radius: 2px;
 }
+
+
 .aButton:hover{
     background: rgba(243, 245, 124, 0.48);
 }
 .aButton{
     text-decoration: none;
-}
-#exitButton{
-    margin: 9px 410px;
-    position: absolute;
-    height: 20px;
-    width: 100px;
-    border-radius: 20px;
+	color: black;
 }
 #windowZoomImage{
 	border: 10px solid #757575;
